--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
-NODE_ENV=development
-PORT=3000
-MONGO_PATH=
-MONGO_USER=
-MONGO_PASSWORD=
-JWT_SECRET=
-ACCESS_TOKEN_PRIVATE_KEY=
-ACCESS_TOKEN_PUBLIC_KEY=
+PORT=sample
+HOST=sample
+PASSWORD=sample
+DB=sample
+USER=sample
