--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "start": "node dist/index.js",
         "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
         "build": "tsc",
-        "postinstall": "npm run build"
+        "postinstall": "npm run build",
+        "delete": "del-cli --force ./dist"
     },
     "keywords": [],
     "author": "",
@@ -26,6 +27,7 @@
         "@types/node": "^18.7.1",
         "@typescript-eslint/eslint-plugin": "^4.29.3",
         "@typescript-eslint/parser": "^4.29.3",
+        "del-cli": "^5.0.0",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.1",
