--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@types/jsonwebtoken": "^8.5.8",
         "@types/lodash": "^4.14.182",
         "@types/morgan": "^1.9.3",
+        "@types/multer": "^1.4.7",
         "@types/node": "^18.7.1",
         "@typescript-eslint/eslint-plugin": "^4.29.3",
         "@typescript-eslint/parser": "^4.29.3",
@@ -42,6 +43,7 @@
         "config": "^3.3.7",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "csv-parse": "^5.3.3",
         "dotenv": "^16.0.1",
         "envalid": "^7.2.2",
         "express": "^4.18.1",
@@ -53,6 +55,7 @@
         "lodash": "^4.17.21",
         "module-alias": "^2.2.2",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "pg": "^8.8.0",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.28.0",
