s3 upload works | ENV updated

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ HOST=sample
 PASSWORD=sample
 DB=sample
 USER=sample
+AWS_ACCESS_KEY_ID=<the access key>
+AWS_SECRET_ACCESS_KEY=<the secret>
+AWS_BUCKET_NAME=<the bucket name>
