--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "typescript": "^4.3.5"
     },
     "dependencies": {
+        "aws-sdk": "^2.1295.0",
         "bcrypt": "^5.0.1",
         "bcryptjs": "^2.4.3",
         "chalk": "4.1.2",
@@ -56,6 +57,7 @@
         "module-alias": "^2.2.2",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1",
         "pg": "^8.8.0",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.28.0",
