--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-PORT=sample
-HOST=sample
-PASSWORD=sample
-DB=sample
-USER=sample
-AWS_ACCESS_KEY_ID=<the access key>
-AWS_SECRET_ACCESS_KEY=<the secret>
-AWS_BUCKET_NAME=<the bucket name>
+PORT=
+HOST=
+PASSWORD=
+DB=
+USERNAME=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
