--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/compression": "^1.7.2",
         "@types/config": "^3.3.0",
         "@types/cookie-parser": "^1.4.3",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
-        "@types/jsonwebtoken": "^8.5.8",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/lodash": "^4.14.182",
         "@types/morgan": "^1.9.3",
         "@types/multer": "^1.4.7",
@@ -51,7 +52,7 @@
         "express-validator": "^6.14.2",
         "helmet": "^4.6.0",
         "http-status-codes": "^2.2.0",
-        "jsonwebtoken": "^8.5.1",
+        "jsonwebtoken": "^9.0.0",
         "lodash": "^4.17.21",
         "module-alias": "^2.2.2",
         "morgan": "^1.10.0",
